# raytracer_rs

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: bench_main.rs  trivial_scenes.rs
benches/benchmarks/: anti_aliasing.rs  bounding_boxes.rs  complex_scenes.rs  lighting.rs  meshes.rs  mod.rs  trivial_scenes.rs
docs/: TODO.md  performance.md
examples/area_light/: main.rs
examples/cover/: main.rs
examples/csgs/: main.rs
examples/dragons/: main.rs
examples/meshes/: main.rs
examples/orrery/: main.rs
examples/patterns/: main.rs
examples/primitives/: main.rs
examples/reflect-refract/: main.rs
examples/reflect_refract/: main.rs
examples/skybox/: main.rs
examples/textured_earth/: main.rs
examples/uv_patterns/: main.rs
meshes/: green prism.mtl  illum test.mtl
scene_descriptions/: bounding-boxes.yml  cover.yml  reflect-refract.yml
src/: lib.rs  main.rs  util.rs
src/camera/: mod.rs  tests.rs
src/canvas/: mod.rs  tests.rs
src/colour/: mod.rs  tests.rs
src/core/: colour.rs  matrix.rs  mod.rs  point.rs  ray.rs  transform.rs  vector.rs
src/docs/: TODO.md
src/image_writer/: mod.rs
src/light/: mod.rs
src/material/: mod.rs  tests.rs
src/matrix/: mod.rs  tests.rs
src/obj_parser/: mod.rs  tests.rs
src/object/: bounds.rs  cone.rs  cylinder.rs  mod.rs  smooth_triangle.rs  tests.rs  triangle.rs
src/pattern/: mod.rs  tests.rs
src/point/: mod.rs  tests.rs
src/ppm_writer/: mod.rs  tests.rs
src/ray/: mod.rs  tests.rs
src/ray_tracer/: mod.rs
src/renderer/: camera.rs  canvas.rs  mod.rs  render.rs  tests.rs
src/scene/: bounding_box.rs  intersection.rs  material.rs  (+4 more)
(+50 files in other folders)
