[package]
name = "ray_tracer"
version = "0.1.0"
authors = ["Richard Dennehy <richard.dennehy@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "trivial_scenes"
harness = false

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
float-cmp = "0.8.0"

[dev-dependencies.criterion]
version = "0.3.4"
features = ["html_reports"]

[dependencies]
nonzero_ext = "0.2.0"
image = "0.23.12"
yaml-rust = "0.4"
either = "1.6.1"